// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WarningAlert Component matches snapshot with default props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#332300",
        "borderColor": "#FFAE00",
        "width": "75%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M11.2328 1.25363C11.1166 1.02672 10.9399 0.836301 10.7224 0.70333C10.5049 0.57036 10.2549 0.5 9.99994 0.5C9.74499 0.5 9.49498 0.57036 9.27745 0.70333C9.05992 0.836301 8.88331 1.02672 8.76706 1.25363L1.14819 16.4914C1.04192 16.7023 0.991331 16.9368 1.00121 17.1727C1.0111 17.4087 1.08113 17.6381 1.20465 17.8394C1.32818 18.0406 1.5011 18.207 1.707 18.3226C1.91289 18.4382 2.14492 18.4993 2.38106 18.5H17.6188C17.8549 18.4993 18.087 18.4382 18.2929 18.3226C18.4988 18.207 18.6717 18.0406 18.7952 17.8394C18.9187 17.6381 18.9888 17.4087 18.9987 17.1727C19.0085 16.9368 18.958 16.7023 18.8517 16.4914L11.2328 1.25363Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
          />
          <RNSVGPath
            d="M11.2986 5.41748L11.0615 12.7429H8.94271L8.70558 5.41748H11.2986ZM9.9995 16.1246C9.63177 16.1246 9.31559 15.994 9.05097 15.7328C8.78978 15.4716 8.65918 15.1554 8.65918 14.7843C8.65918 14.42 8.78978 14.109 9.05097 13.8512C9.31559 13.59 9.63177 13.4594 9.9995 13.4594C10.3535 13.4594 10.6645 13.59 10.9326 13.8512C11.2041 14.109 11.3398 14.42 11.3398 14.7843C11.3398 15.0317 11.2762 15.2568 11.1491 15.4596C11.0254 15.6624 10.8621 15.8239 10.6594 15.9442C10.46 16.0645 10.2401 16.1246 9.9995 16.1246Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`WarningAlert Component matches snapshot with error variant and all props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#2A0C0D",
        "borderColor": "#D13B3D",
        "width": "75%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
              ]
            }
            stroke={
              {
                "payload": 4291902269,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="M11.2984 4.64795L11.0613 11.97H8.94356L8.70653 4.64795H11.2984ZM9.99986 15.3502C9.6323 15.3502 9.31627 15.2196 9.05176 14.9585C8.79069 14.6975 8.66016 14.3814 8.66016 14.0104C8.66016 13.6463 8.79069 13.3354 9.05176 13.0778C9.31627 12.8167 9.6323 12.6862 9.99986 12.6862C10.3537 12.6862 10.6646 12.8167 10.9325 13.0778C11.2039 13.3354 11.3396 13.6463 11.3396 14.0104C11.3396 14.2578 11.276 14.4828 11.1489 14.6855C11.0253 14.8881 10.8621 15.0496 10.6594 15.1698C10.4602 15.29 10.2403 15.3502 9.99986 15.3502Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
          }
        }
      >
        Error Alert
      </Text>
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          }
        }
      >
        This is an error message
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "gap": 8,
        "marginTop": 12,
      }
    }
  >
    <View>
      <Text>
        Fix Now
      </Text>
      <Text>
        Dismiss
      </Text>
    </View>
  </View>
</View>
`;

exports[`WarningAlert Component matches snapshot with stretch disabled 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#332300",
        "borderColor": "#FFAE00",
        "width": "75%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M11.2328 1.25363C11.1166 1.02672 10.9399 0.836301 10.7224 0.70333C10.5049 0.57036 10.2549 0.5 9.99994 0.5C9.74499 0.5 9.49498 0.57036 9.27745 0.70333C9.05992 0.836301 8.88331 1.02672 8.76706 1.25363L1.14819 16.4914C1.04192 16.7023 0.991331 16.9368 1.00121 17.1727C1.0111 17.4087 1.08113 17.6381 1.20465 17.8394C1.32818 18.0406 1.5011 18.207 1.707 18.3226C1.91289 18.4382 2.14492 18.4993 2.38106 18.5H17.6188C17.8549 18.4993 18.087 18.4382 18.2929 18.3226C18.4988 18.207 18.6717 18.0406 18.7952 17.8394C18.9187 17.6381 18.9888 17.4087 18.9987 17.1727C19.0085 16.9368 18.958 16.7023 18.8517 16.4914L11.2328 1.25363Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
          />
          <RNSVGPath
            d="M11.2986 5.41748L11.0615 12.7429H8.94271L8.70558 5.41748H11.2986ZM9.9995 16.1246C9.63177 16.1246 9.31559 15.994 9.05097 15.7328C8.78978 15.4716 8.65918 15.1554 8.65918 14.7843C8.65918 14.42 8.78978 14.109 9.05097 13.8512C9.31559 13.59 9.63177 13.4594 9.9995 13.4594C10.3535 13.4594 10.6645 13.59 10.9326 13.8512C11.2041 14.109 11.3398 14.42 11.3398 14.7843C11.3398 15.0317 11.2762 15.2568 11.1491 15.4596C11.0254 15.6624 10.8621 15.8239 10.6594 15.9442C10.46 16.0645 10.2401 16.1246 9.9995 16.1246Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
          }
        }
      >
        Default Width
      </Text>
    </View>
  </View>
</View>
`;

exports[`WarningAlert Component matches snapshot with stretch enabled 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#332300",
        "borderColor": "#FFAE00",
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M11.2328 1.25363C11.1166 1.02672 10.9399 0.836301 10.7224 0.70333C10.5049 0.57036 10.2549 0.5 9.99994 0.5C9.74499 0.5 9.49498 0.57036 9.27745 0.70333C9.05992 0.836301 8.88331 1.02672 8.76706 1.25363L1.14819 16.4914C1.04192 16.7023 0.991331 16.9368 1.00121 17.1727C1.0111 17.4087 1.08113 17.6381 1.20465 17.8394C1.32818 18.0406 1.5011 18.207 1.707 18.3226C1.91289 18.4382 2.14492 18.4993 2.38106 18.5H17.6188C17.8549 18.4993 18.087 18.4382 18.2929 18.3226C18.4988 18.207 18.6717 18.0406 18.7952 17.8394C18.9187 17.6381 18.9888 17.4087 18.9987 17.1727C19.0085 16.9368 18.958 16.7023 18.8517 16.4914L11.2328 1.25363Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
          />
          <RNSVGPath
            d="M11.2986 5.41748L11.0615 12.7429H8.94271L8.70558 5.41748H11.2986ZM9.9995 16.1246C9.63177 16.1246 9.31559 15.994 9.05097 15.7328C8.78978 15.4716 8.65918 15.1554 8.65918 14.7843C8.65918 14.42 8.78978 14.109 9.05097 13.8512C9.31559 13.59 9.63177 13.4594 9.9995 13.4594C10.3535 13.4594 10.6645 13.59 10.9326 13.8512C11.2041 14.109 11.3398 14.42 11.3398 14.7843C11.3398 15.0317 11.2762 15.2568 11.1491 15.4596C11.0254 15.6624 10.8621 15.8239 10.6594 15.9442C10.46 16.0645 10.2401 16.1246 9.9995 16.1246Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
          }
        }
      >
        Stretched
      </Text>
    </View>
  </View>
</View>
`;

exports[`WarningAlert Component matches snapshot with warning variant and all props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#332300",
        "borderColor": "#FFAE00",
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M11.2328 1.25363C11.1166 1.02672 10.9399 0.836301 10.7224 0.70333C10.5049 0.57036 10.2549 0.5 9.99994 0.5C9.74499 0.5 9.49498 0.57036 9.27745 0.70333C9.05992 0.836301 8.88331 1.02672 8.76706 1.25363L1.14819 16.4914C1.04192 16.7023 0.991331 16.9368 1.00121 17.1727C1.0111 17.4087 1.08113 17.6381 1.20465 17.8394C1.32818 18.0406 1.5011 18.207 1.707 18.3226C1.91289 18.4382 2.14492 18.4993 2.38106 18.5H17.6188C17.8549 18.4993 18.087 18.4382 18.2929 18.3226C18.4988 18.207 18.6717 18.0406 18.7952 17.8394C18.9187 17.6381 18.9888 17.4087 18.9987 17.1727C19.0085 16.9368 18.958 16.7023 18.8517 16.4914L11.2328 1.25363Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
          />
          <RNSVGPath
            d="M11.2986 5.41748L11.0615 12.7429H8.94271L8.70558 5.41748H11.2986ZM9.9995 16.1246C9.63177 16.1246 9.31559 15.994 9.05097 15.7328C8.78978 15.4716 8.65918 15.1554 8.65918 14.7843C8.65918 14.42 8.78978 14.109 9.05097 13.8512C9.31559 13.59 9.63177 13.4594 9.9995 13.4594C10.3535 13.4594 10.6645 13.59 10.9326 13.8512C11.2041 14.109 11.3398 14.42 11.3398 14.7843C11.3398 15.0317 11.2762 15.2568 11.1491 15.4596C11.0254 15.6624 10.8621 15.8239 10.6594 15.9442C10.46 16.0645 10.2401 16.1246 9.9995 16.1246Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
          }
        }
      >
        Warning Alert
      </Text>
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 12,
            "fontWeight": "400",
            "lineHeight": 16,
          }
        }
      >
        This is a warning message
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "gap": 8,
        "marginTop": 12,
      }
    }
  >
    <Text>
      Action Button
    </Text>
  </View>
</View>
`;

exports[`WarningAlert Component renders with default props 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#332300",
        "borderColor": "#FFAE00",
        "width": "75%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M11.2328 1.25363C11.1166 1.02672 10.9399 0.836301 10.7224 0.70333C10.5049 0.57036 10.2549 0.5 9.99994 0.5C9.74499 0.5 9.49498 0.57036 9.27745 0.70333C9.05992 0.836301 8.88331 1.02672 8.76706 1.25363L1.14819 16.4914C1.04192 16.7023 0.991331 16.9368 1.00121 17.1727C1.0111 17.4087 1.08113 17.6381 1.20465 17.8394C1.32818 18.0406 1.5011 18.207 1.707 18.3226C1.91289 18.4382 2.14492 18.4993 2.38106 18.5H17.6188C17.8549 18.4993 18.087 18.4382 18.2929 18.3226C18.4988 18.207 18.6717 18.0406 18.7952 17.8394C18.9187 17.6381 18.9888 17.4087 18.9987 17.1727C19.0085 16.9368 18.958 16.7023 18.8517 16.4914L11.2328 1.25363Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
          />
          <RNSVGPath
            d="M11.2986 5.41748L11.0615 12.7429H8.94271L8.70558 5.41748H11.2986ZM9.9995 16.1246C9.63177 16.1246 9.31559 15.994 9.05097 15.7328C8.78978 15.4716 8.65918 15.1554 8.65918 14.7843C8.65918 14.42 8.78978 14.109 9.05097 13.8512C9.31559 13.59 9.63177 13.4594 9.9995 13.4594C10.3535 13.4594 10.6645 13.59 10.9326 13.8512C11.2041 14.109 11.3398 14.42 11.3398 14.7843C11.3398 15.0317 11.2762 15.2568 11.1491 15.4596C11.0254 15.6624 10.8621 15.8239 10.6594 15.9442C10.46 16.0645 10.2401 16.1246 9.9995 16.1246Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    />
  </View>
</View>
`;

exports[`WarningAlert Component renders with error variant 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#2A0C0D",
        "borderColor": "#D13B3D",
        "width": "75%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={20}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M10 19C14.9706 19 19 14.9706 19 10C19 5.02944 14.9706 1 10 1C5.02944 1 1 5.02944 1 10C1 14.9706 5.02944 19 10 19Z"
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              [
                "stroke",
              ]
            }
            stroke={
              {
                "payload": 4291902269,
                "type": 0,
              }
            }
          />
          <RNSVGPath
            d="M11.2984 4.64795L11.0613 11.97H8.94356L8.70653 4.64795H11.2984ZM9.99986 15.3502C9.6323 15.3502 9.31627 15.2196 9.05176 14.9585C8.79069 14.6975 8.66016 14.3814 8.66016 14.0104C8.66016 13.6463 8.79069 13.3354 9.05176 13.0778C9.31627 12.8167 9.6323 12.6862 9.99986 12.6862C10.3537 12.6862 10.6646 12.8167 10.9325 13.0778C11.2039 13.3354 11.3396 13.6463 11.3396 14.0104C11.3396 14.2578 11.276 14.4828 11.1489 14.6855C11.0253 14.8881 10.8621 15.0496 10.6594 15.1698C10.4602 15.29 10.2403 15.3502 9.99986 15.3502Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
          }
        }
      >
        Error
      </Text>
    </View>
  </View>
</View>
`;

exports[`WarningAlert Component renders with warning variant 1`] = `
<View
  style={
    [
      {
        "borderRadius": 8,
        "borderWidth": 1,
        "padding": 10,
      },
      {
        "backgroundColor": "#332300",
        "borderColor": "#FFAE00",
        "width": "75%",
      },
    ]
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "gap": 10,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 20,
          "justifyContent": "center",
          "marginTop": 2,
          "width": 20,
        }
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight="20"
        bbWidth="20"
        fill="none"
        focusable={false}
        height="20"
        meetOrSlice={0}
        minX={0}
        minY={0}
        size="20"
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={19}
        vbWidth={20}
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M11.2328 1.25363C11.1166 1.02672 10.9399 0.836301 10.7224 0.70333C10.5049 0.57036 10.2549 0.5 9.99994 0.5C9.74499 0.5 9.49498 0.57036 9.27745 0.70333C9.05992 0.836301 8.88331 1.02672 8.76706 1.25363L1.14819 16.4914C1.04192 16.7023 0.991331 16.9368 1.00121 17.1727C1.0111 17.4087 1.08113 17.6381 1.20465 17.8394C1.32818 18.0406 1.5011 18.207 1.707 18.3226C1.91289 18.4382 2.14492 18.4993 2.38106 18.5H17.6188C17.8549 18.4993 18.087 18.4382 18.2929 18.3226C18.4988 18.207 18.6717 18.0406 18.7952 17.8394C18.9187 17.6381 18.9888 17.4087 18.9987 17.1727C19.0085 16.9368 18.958 16.7023 18.8517 16.4914L11.2328 1.25363Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
                "stroke",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
          />
          <RNSVGPath
            d="M11.2986 5.41748L11.0615 12.7429H8.94271L8.70558 5.41748H11.2986ZM9.9995 16.1246C9.63177 16.1246 9.31559 15.994 9.05097 15.7328C8.78978 15.4716 8.65918 15.1554 8.65918 14.7843C8.65918 14.42 8.78978 14.109 9.05097 13.8512C9.31559 13.59 9.63177 13.4594 9.9995 13.4594C10.3535 13.4594 10.6645 13.59 10.9326 13.8512C11.2041 14.109 11.3398 14.42 11.3398 14.7843C11.3398 15.0317 11.2762 15.2568 11.1491 15.4596C11.0254 15.6624 10.8621 15.8239 10.6594 15.9442C10.46 16.0645 10.2401 16.1246 9.9995 16.1246Z"
            fill={
              {
                "payload": 4294375158,
                "type": 0,
              }
            }
            propList={
              [
                "fill",
              ]
            }
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        {
          "flex": 1,
          "gap": 2,
        }
      }
    >
      <Text
        style={
          {
            "color": "#F6F6F6",
            "fontSize": 14,
            "fontWeight": "600",
            "lineHeight": 18,
          }
        }
      >
        Warning
      </Text>
    </View>
  </View>
</View>
`;
